cases/tests/nginx-ingress/renew_tls_secret/decoy/tls-legacy-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  name: tls-legacy
  namespace: demo
  labels:
    benchmark.decoy: "true"
    benchmark.case: renew_tls_secret
type: kubernetes.io/tls
data:
  tls.crt: ZHVtbXktY2VydA==
  tls.key: ZHVtbXkta2V5
